# handbook

./: .env.example  .gitignore  README.md
agent_harness/: README.md  pyproject.toml
agent_harness/src/agent_harness/: openhands_agent.py
docker/: Dockerfile  pyproject.toml
docker/openhands-runner/: openhands_runner.py
docker/scripts/: boot.sh  setup.sh  start.sh
tasks/finance_meridian_partners_158b9045/: instruction.md  system_prompt.md  task.toml
tasks/finance_meridian_partners_19d57538/: instruction.md  system_prompt.md  task.toml
tasks/finance_meridian_partners_331accf1/: instruction.md  system_prompt.md  task.toml
tasks/finance_meridian_partners_4dace65e/: instruction.md  system_prompt.md  task.toml
tasks/finance_meridian_partners_a0895480/: instruction.md  system_prompt.md  task.toml
tasks/finance_meridian_partners_cc2fc143/: instruction.md  system_prompt.md  task.toml
tasks/finance_sunshine_set_6b9398f4/: instruction.md  system_prompt.md  task.toml
tasks/finance_sunshine_set_7c041148/: instruction.md  system_prompt.md  task.toml
tasks/finance_sunshine_set_b0b8129d/: instruction.md  task.toml
tasks/finance_sunshine_set_b581c493/: instruction.md  system_prompt.md  task.toml
tasks/finance_sunshine_set_d9d532c1/: instruction.md  system_prompt.md  task.toml
tasks/finance_sunshine_set_ebac9768/: instruction.md  system_prompt.md  task.toml
tasks/hr_crestwood_university_1b602061/: instruction.md  system_prompt.md  task.toml
tasks/hr_crestwood_university_2071c562/: instruction.md  system_prompt.md  task.toml
tasks/hr_crestwood_university_79786c46/: instruction.md  system_prompt.md  task.toml
tasks/hr_crestwood_university_d93daa01/: task.toml
tasks/hr_crestwood_university_da394eac/: instruction.md  system_prompt.md  task.toml
tasks/hr_crestwood_university_ee4d1791/: instruction.md  system_prompt.md  task.toml
tasks/hr_ridgeline_gear_co_2deeab56/: instruction.md  system_prompt.md  task.toml
tasks/hr_ridgeline_gear_co_44e4c745/: instruction.md  system_prompt.md  task.toml
tasks/hr_ridgeline_gear_co_6950ff2b/: instruction.md  system_prompt.md  task.toml
tasks/hr_ridgeline_gear_co_6d4d0f70/: instruction.md  task.toml
tasks/hr_ridgeline_gear_co_6e501f78/: instruction.md  system_prompt.md  task.toml
tasks/hr_ridgeline_gear_co_929c1527/: instruction.md  task.toml
tasks/hr_ridgeline_gear_co_b337f86b/: instruction.md  system_prompt.md  task.toml
tasks/insurance_mojave_crest_assurance_company_187e3a8c/: instruction.md  system_prompt.md  task.toml
tasks/insurance_mojave_crest_assurance_company_2a800bf7/: instruction.md  system_prompt.md  task.toml
tasks/insurance_mojave_crest_assurance_company_4d2a2588/: instruction.md  system_prompt.md  task.toml
tasks/insurance_mojave_crest_assurance_company_5122b4da/: instruction.md  system_prompt.md  task.toml
tasks/insurance_mojave_crest_assurance_company_7245b8dd/: instruction.md  system_prompt.md  task.toml
tasks/insurance_mojave_crest_assurance_company_ab59bcf7/: instruction.md  system_prompt.md  task.toml
tasks/insurance_vanguard_shield_mutual_177fce83/: instruction.md  system_prompt.md  task.toml
tasks/insurance_vanguard_shield_mutual_4321b8e9/: instruction.md  system_prompt.md  task.toml
tasks/insurance_vanguard_shield_mutual_82da8d17/: instruction.md  task.toml
tasks/insurance_vanguard_shield_mutual_89007056/: instruction.md  system_prompt.md  task.toml
tasks/insurance_vanguard_shield_mutual_90ff0751/: instruction.md  system_prompt.md  task.toml
tasks/insurance_vanguard_shield_mutual_9b2f7a29/: instruction.md  system_prompt.md  task.toml
tasks/insurance_vanguard_shield_mutual_fe30fce5/: instruction.md  system_prompt.md  task.toml
tasks/logistics_gear_sytems_inc_0807b5a6/: instruction.md  system_prompt.md  task.toml
tasks/logistics_gear_sytems_inc_502e8c5e/: instruction.md  system_prompt.md  task.toml
tasks/logistics_gear_sytems_inc_74170ae1/: instruction.md  system_prompt.md  task.toml
tasks/logistics_gear_sytems_inc_9b60992d/: system_prompt.md  task.toml
tasks/logistics_gear_sytems_inc_ad2ff597/: instruction.md  system_prompt.md  task.toml
tasks/logistics_gear_sytems_inc_dba0375e/: instruction.md  system_prompt.md  task.toml
tasks/logistics_prairie_star_creamery_27470081/: instruction.md  system_prompt.md  task.toml
tasks/logistics_prairie_star_creamery_4a2f4b1a/: instruction.md  system_prompt.md  task.toml
tasks/logistics_prairie_star_creamery_7b63c60d/: instruction.md  system_prompt.md  task.toml
tasks/logistics_prairie_star_creamery_861b2650/: instruction.md  system_prompt.md  task.toml
tasks/logistics_prairie_star_creamery_a9dc52cb/: instruction.md  system_prompt.md  task.toml
tasks/logistics_prairie_star_creamery_f382586a/: instruction.md  task.toml
tasks/medical_careig_specialty_pharmacy_08ae3378/: instruction.md  system_prompt.md  task.toml
tasks/medical_careig_specialty_pharmacy_3c62ee67/: instruction.md  system_prompt.md  task.toml
tasks/medical_careig_specialty_pharmacy_d3e312a5/: task.toml
tasks/medical_careig_specialty_pharmacy_d4619b8b/: instruction.md  task.toml
tasks/medical_careig_specialty_pharmacy_ea622238/: instruction.md  system_prompt.md  task.toml
tasks/medical_careig_specialty_pharmacy_f5947c33/: instruction.md  system_prompt.md  task.toml
tasks/medical_careig_specialty_pharmacy_f6d19d30/: instruction.md  task.toml
tasks/medical_pathfinder_billing_and_coding_073e602b/: instruction.md  system_prompt.md  task.toml
tasks/medical_pathfinder_billing_and_coding_1d8667fc/: instruction.md  task.toml
tasks/medical_pathfinder_billing_and_coding_9d274282/: instruction.md  system_prompt.md  task.toml
tasks/medical_pathfinder_billing_and_coding_a25684b9/: instruction.md  system_prompt.md  task.toml
tasks/medical_pathfinder_billing_and_coding_a70deabc/: instruction.md  system_prompt.md  task.toml
tasks/medical_pathfinder_billing_and_coding_bbf1a560/: instruction.md  system_prompt.md  task.toml
tasks/medical_pathfinder_billing_and_coding_c01deb6e/: instruction.md  system_prompt.md  task.toml
(+781 files in other folders)
