[project]
name = "agent-harness"
version = "0.1.0"
description = "Harbor agent harness for Syntara tasks"
requires-python = ">=3.12"
dependencies = [
    "harbor",
    "deepdiff",
    "litellm",
    # NOTE: openhands-sdk is NOT a host dep. openhands_agent.py runs the agent
    # loop in-container via the vendored openhands_runner.py, installed into an
    # isolated venv baked into the syntara image (see docker/Dockerfile, which
    # pins the SDK). The host side only does exec/upload/download.
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_harness"]
